--- a/.env.local
+++ b/.env.local
@@ -1,11 +1,11 @@
 # Database Configuration
 MYSQL_DATABASE="railway"
-MYSQL_PUBLIC_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_TCP_PROXY_DOMAIN}}:${{RAILWAY_TCP_PROXY_PORT}}/${{MYSQL_DATABASE}}"
+MYSQL_PUBLIC_URL="mysql://root:HMNdrYUUWIqVeGeKoiDDIYXukHcSuKnP@yamabiko.proxy.rlwy.net:41451/railway"
 MYSQL_ROOT_PASSWORD="HMNdrYUUWIqVeGeKoiDDIYXukHcSuKnP"
-MYSQL_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_PRIVATE_DOMAIN}}:3306/${{MYSQL_DATABASE}}"
-MYSQLDATABASE="${{MYSQL_DATABASE}}"
-MYSQLHOST="${{RAILWAY_PRIVATE_DOMAIN}}"
-MYSQLPASSWORD="${{MYSQL_ROOT_PASSWORD}}"
+MYSQL_URL="mysql://root:HMNdrYUUWIqVeGeKoiDDIYXukHcSuKnP@mysql.railway.internal:41451/railway"
+MYSQLDATABASE="railway"
+MYSQLHOST="mysql.railway.internal"
+MYSQLPASSWORD="HMNdrYUUWIqVeGeKoiDDIYXukHcSuKnP"
 MYSQLPORT="3306"
 MYSQLUSER="root"
 
